--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
     <div class="app-container">
         <header class="header">
             <h1>RetroArch Overlay Generator</h1>
-            <p class="subtitle">Generate custom overlays with real-time preview</p>
         </header>
 
         <div class="main-content">
-            <!-- Config Panel -->
-            <div class="config-panel">
+            <!-- Left Config Panel -->
+            <div class="config-panel config-panel-left">
                 <div class="panel-scroll">
-                    <!-- Left Column -->
-                    <div class="config-column-left">
+                    <div class="config-content">
                         <div class="card">
                             <div class="card-header">
                                 <h2>Resolution</h2>
@@ -66,9 +64,9 @@
                             <div class="form-group">
                                 <label class="label">
                                     <span>Line Height</span>
-                                    <span class="label-value" id="scanlineHeightValue">2px</span>
+                                    <span class="label-value" id="scanlineHeightValue">1px</span>
                                 </label>
-                                <input type="range" id="scanlineHeight" min="0.5" max="20" step="0.5" value="2" class="slider">
+                                <input type="range" id="scanlineHeight" min="0.5" max="20" step="0.5" value="1" class="slider">
                             </div>
                             <div class="form-group">
                                 <label class="label">
@@ -84,9 +82,9 @@
                             <div class="form-group">
                                 <label class="label">
                                     <span>Opacity</span>
-                                    <span class="label-value" id="scanlineOpacityValue">50%</span>
+                                    <span class="label-value" id="scanlineOpacityValue">20%</span>
                                 </label>
-                                <input type="range" id="scanlineOpacity" min="0" max="100" step="0.5" value="50" class="slider">
+                                <input type="range" id="scanlineOpacity" min="0" max="100" step="0.5" value="20" class="slider">
                             </div>
                         </div>
                     </div>
@@ -256,26 +254,58 @@
                             </div>
                         </div>
                     </div>
-                    </div>
 
-                    <!-- Right Column -->
-                    <div class="config-column-right">
-                        <div class="card">
-                            <div class="card-header">
-                                <h2>Preview Image</h2>
-                            </div>
-                            <div class="card-content">
-                                <label class="file-upload-label">
-                                    <input type="file" id="previewImage" accept="image/*" class="file-input">
-                                    <span class="file-upload-button">Choose Image</span>
-                                </label>
-                                <button id="clearImage" class="btn-clear" style="display: none;">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
-                                    Clear
-                                </button>
-                            </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <h2>Preview Image</h2>
                         </div>
+                        <div class="card-content">
+                            <label class="file-upload-label">
+                                <input type="file" id="previewImage" accept="image/*" class="file-input">
+                                <span class="file-upload-button">Choose Image</span>
+                            </label>
+                            <button id="clearImage" class="btn-clear" style="display: none;">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                                Clear
+                            </button>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
 
+            <!-- Preview Panel -->
+            <div class="preview-panel">
+                <div class="card preview-card">
+                    <div class="card-header">
+                        <div class="preview-header-left">
+                            <h2>Live Preview</h2>
+                            <div id="previewInfo" class="preview-info"></div>
+                        </div>
+                        <div class="preview-header-right">
+                            <label class="toggle-wrapper">
+                                <input type="checkbox" id="overlayToggle" class="toggle-input" checked>
+                                <span class="toggle-slider"></span>
+                                <span class="toggle-label">Overlay</span>
+                            </label>
+                            <button id="downloadBtn" class="btn-download-header">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
+                                Download PNG
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card-content preview-content">
+                        <div class="canvas-wrapper">
+                            <canvas id="previewCanvas"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Right Config Panel for Frame -->
+            <div class="config-panel config-panel-right">
+                <div class="panel-scroll">
+                    <div class="config-content">
                         <div class="card">
                             <div class="card-header">
                                 <h2>Frame (Optional)</h2>
@@ -378,34 +408,6 @@
                                     <input type="range" id="logoSize" min="20" max="500" step="1" value="100" class="slider">
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Preview Panel -->
-            <div class="preview-panel">
-                <div class="card preview-card">
-                    <div class="card-header">
-                        <div class="preview-header-left">
-                            <h2>Live Preview</h2>
-                            <div id="previewInfo" class="preview-info"></div>
-                        </div>
-                        <div class="preview-header-right">
-                            <label class="toggle-wrapper">
-                                <input type="checkbox" id="overlayToggle" class="toggle-input" checked>
-                                <span class="toggle-slider"></span>
-                                <span class="toggle-label">Overlay</span>
-                            </label>
-                            <button id="downloadBtn" class="btn-download-header">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
-                                Download PNG
-                            </button>
-                        </div>
-                    </div>
-                    <div class="card-content preview-content">
-                        <div class="canvas-wrapper">
-                            <canvas id="previewCanvas"></canvas>
                         </div>
                     </div>
                 </div>
