fix: added option

--- a/index.html
+++ b/index.html
@@ -287,6 +287,13 @@
                                 <span class="separator">:</span>
                                 <input type="number" id="customAspectHeight" placeholder="Height" min="1" value="9" class="input">
                             </div>
+                            <div class="form-group" id="aspectRatioBaseGroup" style="display: none;">
+                                <label class="label">Aspect Ratio Base</label>
+                                <select id="aspectRatioBase" class="select">
+                                    <option value="width">Width (Fixed)</option>
+                                    <option value="height">Height (Fixed)</option>
+                                </select>
+                            </div>
                             <div class="form-group">
                                 <label class="label">Image Position</label>
                                 <select id="imagePosition" class="select">
